--- a/app/src/main/res/layout/activity_addlocation.xml
+++ b/app/src/main/res/layout/activity_addlocation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.charlesbai321.myapplication.Activities.Main2Activity">
+    tools:context="com.example.charlesbai321.myapplication.Activities.AddLocationActivity">
 
     <include layout="@layout/content_main2" />
 
