--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.charlesbai321.myapplication.Activities.Main2Activity"
-    tools:showIn="@layout/activity_main2">
+    tools:context="com.example.charlesbai321.myapplication.Activities.AddLocationActivity"
+    tools:showIn="@layout/activity_addlocation">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
